test/Fail/Issue4927-5.agda
F : Setâ‚
F with @flat Set
F | _ = Set
