test/Fail/Issue4927-5.err
Issue4927-5.agda:2.8: error: [ParseError]
@<ERROR> flat Set
F | _ = Set
...
